--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
     "angular-animate": "~1.2.0",
-    "angular-route": "~1.2.0"
+    "angular-route": "~1.2.0",
+    "angular-timer": "~1.1.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
