--- a/bower.json
+++ b/bower.json
@@ -2,16 +2,20 @@
   "name": "lysogsalt2015no",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.2.0",
+    "angular": "~1.3.0",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
-    "angular-animate": "~1.2.0",
-    "angular-route": "~1.2.0",
-    "angular-timer": "~1.1.7"
+    "angular-animate": "~1.3.0",
+    "angular-route": "~1.3.0",
+    "angular-timer": "~1.1.7",
+    "ngFx": "~1.0.5"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.0",
-    "angular-scenario": "~1.2.0"
+    "angular-mocks": "~1.3.0",
+    "angular-scenario": "~1.3.0"
   },
-  "appPath": "app"
+  "appPath": "app",
+  "resolutions": {
+    "angular": "~1.3.0"
+  }
 }
